@@ -18,6 +18,8 @@
 * Improved performance by limiting our posts_where, wp_count_posts and other filters in Groups_Post_Access to handled post types only.
 * Fixed a potential fatal error when the user_register hook is fired and get_current_screen() is not defined.
 * Updated translations.
+* Fixed a notice when no post types are selected in Groups > Options.
+* Added comment filters to hide comments on protected entries.
 
 = 2.1.2 =
 * Fixed a warning that came up when the post type in a query is provided as an array indicating multiple post types.
